Fixed issue with buttons beeing too close to the edge of the screen.

--- a/src/Yahtzee/yahtzee.css
+++ b/src/Yahtzee/yahtzee.css
@@ -49,6 +49,7 @@
 /* Score Board */
 #scoreboard{
     grid-row: 1 / 4;
+    margin-right: 5px;
 }
 .row{
     border-top: 1px solid;
